<resources>
    <string name="app_name">Subasta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_account">Mi cuenta</string>
    <string name="menu_payment">Metodos de pago</string>
    <string name="menu_article">Mis articulos</string>
    <string name="menu_bid">Mis pujas</string>
    <string name="menu_statistic">Mis estadísticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="access_login_register" >Acceder o Registrarse</string>


    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Registrarse</string>
    <string name="Email">Email</string>

</resources>