<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/article"
            android:title="@string/menu_article" />
        <item
            android:id="@+id/nav_bid"
            android:icon="@drawable/bid"
            android:title="@string/menu_bid" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/menu_statistic" />
    </group>
</menu>