<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Principal">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="home"/>

            <item
                android:id="@+id/personas"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="personas"/>

            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/account"
                android:icon="@drawable/user"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/payment"
                android:icon="@drawable/payment"
                android:title="@string/menu_payment" />
            <item
                android:id="@+id/article"
                android:icon="@drawable/article"
                android:title="@string/menu_article" />
            <item
                android:id="@+id/bid"
                android:icon="@drawable/bid"
                android:title="@string/menu_bid" />
            <item
                android:id="@+id/statistic"
                android:icon="@drawable/statistic"
                android:title="@string/menu_statistic" />

        </menu>
    </item>
</menu>