<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.platzi.subasta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.platzi.subasta.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.platzi.subasta.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_article"
        android:name="com.platzi.subasta.ui.article.ArticleFragment"
        android:label="@string/menu_article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/nav_bid"
        android:name="com.platzi.subasta.ui.bid.BidFragment"
        android:label="@string/menu_bid"
        tools:layout="@layout/fragment_bid" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.platzi.subasta.ui.statistic.EstatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />
</navigation>